<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainFragment"
    android:theme="@style/NoTitleBar">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:id="@+id/v_Main_TopBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

       <Button
            android:id="@+id/bt_Main_Alarm"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toLeftOf="@+id/v_Main_TopBar"
            android:text="@string/bt_Main_Alarm"/>

        <Button
            android:id="@+id/bt_Main_Refresh"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/bt_Main_Refresh"
            app:layout_constraintLeft_toLeftOf="@+id/v_Main_TopBar"
            app:layout_constraintRight_toRightOf="@+id/v_Main_TopBar" />

        <Button
            android:id="@+id/bt_Main_Shop"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            app:layout_constraintRight_toRightOf="@+id/v_Main_TopBar"
            android:text="@string/bt_Main_Shop"/>

        <View
            android:id="@+id/v_Main_TopTab"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_Main_TopBar" />

        <Button
            android:id="@+id/bt_Main_Distance"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            app:layout_constraintLeft_toLeftOf="@+id/v_Main_TopTab"
            app:layout_constraintRight_toLeftOf="@+id/bt_Main_New"
            app:layout_constraintTop_toTopOf="@+id/v_Main_TopTab"
            app:layout_constraintBottom_toBottomOf="@+id/v_Main_TopTab"
            android:text="@string/bt_Main_Distance">
        </Button>

        <Button
            android:id="@+id/bt_Main_New"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            app:layout_constraintLeft_toRightOf="@+id/bt_Main_Distance"
            app:layout_constraintRight_toLeftOf="@+id/bt_Main_Today"
            app:layout_constraintTop_toTopOf="@+id/v_Main_TopTab"
            app:layout_constraintBottom_toBottomOf="@+id/v_Main_TopTab"
            android:text="@string/bt_Main_New">
        </Button>

        <Button
            android:id="@+id/bt_Main_Today"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            app:layout_constraintLeft_toRightOf="@+id/bt_Main_New"
            app:layout_constraintRight_toLeftOf="@+id/bt_Main_Friend"
            app:layout_constraintTop_toTopOf="@+id/v_Main_TopTab"
            app:layout_constraintBottom_toBottomOf="@+id/v_Main_TopTab"
            android:text="@string/bt_Main_Today">
        </Button>

        <Button
            android:id="@+id/bt_Main_Friend"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            app:layout_constraintLeft_toRightOf="@+id/bt_Main_Today"
            app:layout_constraintRight_toRightOf="@+id/v_Main_TopTab"
            app:layout_constraintTop_toTopOf="@+id/v_Main_TopTab"
            app:layout_constraintBottom_toBottomOf="@+id/v_Main_TopTab"
            android:text="@string/bt_Main_Friend">
        </Button>
    </android.support.constraint.ConstraintLayout>



</FrameLayout>