<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_User_Search_Popup_DescBG"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/bg_white"
        android:tint="@color/activity_bg"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/tv_User_Search_Popup_Title"
        style="@style/BaseContentTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/MSG_USER_SEARCH_TITLE"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="@+id/iv_User_Search_Popup_DescBG"
        app:layout_constraintRight_toRightOf="@+id/iv_User_Search_Popup_DescBG"
        app:layout_constraintLeft_toLeftOf="@+id/iv_User_Search_Popup_DescBG"
        android:textSize="@dimen/default_font_size_big"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/str_color_1"/>

    <EditText
        android:id="@+id/et_User_Search_Popup_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BaseEditTextView"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_User_Search_Popup_Title"
        app:layout_constraintRight_toRightOf="@+id/iv_User_Search_Popup_DescBG"
        app:layout_constraintLeft_toLeftOf="@+id/iv_User_Search_Popup_DescBG"
        android:hint="@string/MSG_USER_SEARCH_HINT"
        android:inputType="textNoSuggestions"
        android:cursorVisible="true"
        android:maxLines="1"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/tv_User_Search_Popup_Buttons_OK"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        style="@style/BaseTextView"
        app:layout_constraintTop_toBottomOf="@+id/et_User_Search_Popup_Name"
        app:layout_constraintLeft_toLeftOf="@+id/iv_User_Search_Popup_DescBG"
        app:layout_constraintRight_toLeftOf="@+id/tv_User_Search_Popup_Buttons_Cancel"
        android:text="@string/MSG_OK"
        android:textStyle="bold"
        android:textSize="@dimen/default_font_size_big"
        android:gravity="center"
        android:textColor="@color/button_enable_str"
        android:background="@color/button_enable"/>

    <TextView
        android:id="@+id/tv_User_Search_Popup_Buttons_Cancel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        style="@style/BaseTextView"
        app:layout_constraintTop_toBottomOf="@+id/et_User_Search_Popup_Name"
        app:layout_constraintLeft_toRightOf="@+id/tv_User_Search_Popup_Buttons_OK"
        app:layout_constraintRight_toRightOf="@+id/iv_User_Search_Popup_DescBG"
        android:text="@string/MSG_CANCEL"
        android:textColor="@color/button_disable_str"
        android:textStyle="bold"
        android:textSize="@dimen/default_font_size_big"
        android:gravity="center"
        android:background="@color/button_disable"/>

</android.support.constraint.ConstraintLayout>