<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activty.ClubSettingActivity"
    android:background="@color/activity_bg">

    <include
        android:id="@+id/ui_ClubSetting_TopBar"
        layout="@layout/ui_topbar" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/tv_ClubSetting_Empty"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@+id/ui_ClubSetting_TopBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/tv_ClubSetting_Join_Wait"
        style="@style/BaseContentTextView_AutoSize"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_ClubSetting_Empty"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/MSG_CLUB_JOIN_WAIT"
        android:paddingLeft="10dp"
        android:gravity="left|center_vertical"
        android:textColor="@color/str_color_1"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/tv_ClubSetting_Report"
        style="@style/BaseContentTextView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_ClubSetting_Join_Wait"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/MSG_CLUB_REPORT_CONTENT"
        android:paddingLeft="10dp"
        android:gravity="left|center_vertical"
        android:textColor="@color/str_color_1"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/tv_ClubSetting_Withdrawal"
        style="@style/BaseContentTextView_AutoSize"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_ClubSetting_Report"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/MSG_CLUB_WITHDRAWAL"
        android:gravity="center"
        android:textColor="@color/red"
        android:background="@color/white"/>

</android.support.constraint.ConstraintLayout>