<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_Login_Popup_BG"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/bg_white"
        android:tint="@color/activity_bg"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/tv_Login_Popup_Desc"
        style="@style/BaseTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/MSG_LOGIN"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@+id/iv_Login_Popup_BG"
        app:layout_constraintRight_toRightOf="@+id/iv_Login_Popup_BG"
        app:layout_constraintLeft_toLeftOf="@+id/iv_Login_Popup_BG"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/default_font_size_big"
        android:textColor="@color/str_color_1"/>

    <EditText
        android:id="@+id/et_Login_Nickname"
        android:layout_width="0dp"
        android:layout_height="40dp"
        style="@style/BaseEditTextView"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintRight_toRightOf="@+id/iv_Login_Popup_BG"
        app:layout_constraintLeft_toLeftOf="@+id/iv_Login_Popup_BG"
        app:layout_constraintTop_toBottomOf="@+id/tv_Login_Popup_Desc"
        android:hint="@string/NICKNAME_HINT"
        android:inputType="textNoSuggestions|text"
        android:imeOptions="actionDone"
        android:cursorVisible="true"/>

    <EditText
        android:id="@+id/et_Login_Password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        style="@style/BaseEditTextView"
        app:layout_constraintRight_toRightOf="@+id/iv_Login_Popup_BG"
        app:layout_constraintLeft_toLeftOf="@+id/iv_Login_Popup_BG"
        app:layout_constraintTop_toBottomOf="@+id/et_Login_Nickname"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/PASSWORD_HINT"
        android:inputType="textNoSuggestions|textPassword"
        android:imeOptions="actionDone"
        android:cursorVisible="true"/>

    <TextView
        android:id="@+id/tv_Login_Popup_Buttons_OK"
        android:layout_width="0dp"
        android:layout_height="50dp"
        style="@style/BaseTextView"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_Login_Popup_BG"
        app:layout_constraintLeft_toLeftOf="@+id/iv_Login_Popup_BG"
        app:layout_constraintRight_toLeftOf="@+id/tv_Login_Popup_Buttons_Cancel"
        android:text="@string/MSG_OK"
        android:textSize="@dimen/default_font_size_big"
        android:gravity="center"
        android:textColor="@color/button_enable_str"
        android:background="@color/button_enable"/>

    <TextView
        android:id="@+id/tv_Login_Popup_Buttons_Cancel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        style="@style/BaseTextView"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_Login_Popup_BG"
        app:layout_constraintLeft_toRightOf="@+id/tv_Login_Popup_Buttons_OK"
        app:layout_constraintRight_toRightOf="@+id/iv_Login_Popup_BG"
        android:text="@string/MSG_CANCEL"
        android:textColor="@color/button_disable_str"
        android:textSize="@dimen/default_font_size_big"
        android:gravity="center"
        android:background="@color/button_disable"/>

</androidx.constraintlayout.widget.ConstraintLayout>