<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activty.FavoriteSelectActivity"
    android:background="@color/activity_bg">

    <include
        android:id="@+id/ui_FavoriteSelect_TopBar"
        layout="@layout/ui_topbar"/>

    <EditText
        android:id="@+id/et_FavoriteSelect_Search"
        style="@style/BaseEditTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingRight="70dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ui_FavoriteSelect_TopBar"
        android:hint="@string/et_SignUp_Favorite_Detail_Search"
        android:inputType="textNoSuggestions"
        android:imeOptions="actionSearch"
        android:cursorVisible="true"/>

    <ImageView
        android:id="@+id/iv_FavoriteSelect_Search"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="@id/et_FavoriteSelect_Search"
        app:layout_constraintBottom_toBottomOf="@id/et_FavoriteSelect_Search"
        app:layout_constraintRight_toRightOf="@id/et_FavoriteSelect_Search"
        android:tint="@color/icon_tint_brown"
        android:src="@drawable/ic_search"/>

    <TextView
        android:id="@+id/tv_FavoriteSelect_Select_Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/BaseTextView"
        app:layout_constraintTop_toBottomOf="@+id/et_FavoriteSelect_Search"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/FAVORITE_SELECT_VIEW"
        android:textStyle="bold"
        android:gravity="center|left"
        android:textColor="@color/str_color_1"
        android:background="@color/info_sub_slot_title_bg"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_FavoriteSelect_Select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_min="70dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_FavoriteSelect_Select_Title" />

    <TextView
        android:id="@+id/tv_FavoriteSelect_Empty"
        android:layout_width="0dp"
        android:layout_height="70dp"
        style="@style/BaseTextView"
        app:layout_constraintTop_toBottomOf="@+id/tv_FavoriteSelect_Select_Title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/FAVORITE_SELECT_EMPTY"
        android:textColor="@color/str_color_1"/>

    <TextView
        android:id="@+id/tv_FavoriteSelect_Recom_Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/BaseTextView"
        app:layout_constraintTop_toBottomOf="@+id/rv_FavoriteSelect_Select"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:text="@string/FAVORITE_SELECT_RECOM"
        android:gravity="center|left"
        android:textColor="@color/str_color_1"
        android:background="@color/info_sub_slot_title_bg"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_FavoriteSelect_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_max="400dp"
        app:layout_constraintTop_toBottomOf="@id/tv_FavoriteSelect_Recom_Title"
        app:layout_constraintBottom_toTopOf="@+id/tv_FavoriteSelect_Ok"/>

    <TextView
        android:id="@+id/tv_FavoriteSelect_Ok"
        android:layout_width="0dp"
        android:layout_height="@dimen/top_bar_height"
        style="@style/BaseTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/MSG_SAVE"
        android:gravity="center"
        android:textColor="@color/button_enable_str"
        android:textSize="@dimen/default_font_size_big"
        android:background="@color/button_enable"/>

</androidx.constraintlayout.widget.ConstraintLayout>