<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activty.UserReportActivity">

    <include
        android:id="@+id/ui_UserReport_TopBar"
        layout="@layout/ui_topbar"/>

    <TextView
        android:id="@+id/tv_UserReport_Desc"
        style="@style/BaseTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ui_UserReport_TopBar"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:paddingLeft="10dp"
        android:gravity="center|left"
        android:text="@string/USER_REPORT_DESC"
        android:textColor="@color/str_color_1"
        android:background="@color/info_sub_slot_title_bg"
        />

    <TextView
        android:id="@+id/tv_UserReport_Count"
        style="@style/BaseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_UserReport_Desc"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="4000"
        android:textColor="@color/str_color_1"
        />

    <EditText
        android:id="@+id/et_UserReport_Memo"
        style="@style/BaseEditTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_UserReport_Desc"
        app:layout_constraintBottom_toTopOf="@+id/tv_UserReport_Report"
        android:paddingTop="10dp"
        android:gravity="top"
        android:scrollHorizontally="true"
        android:hint="@string/USER_REPORT_DESC_HINT"
        android:inputType="textNoSuggestions|textMultiLine|textImeMultiLine"
        android:cursorVisible="true"
        android:background="@drawable/bg_white"
        />

    <TextView
        android:id="@+id/tv_UserReport_Report"
        android:layout_width="0dp"
        android:layout_height="@dimen/top_bar_height"
        style="@style/BaseTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/MSG_REPORT"
        android:gravity="center"
        android:textColor="@color/button_enable_str"
        android:textStyle="bold"
        android:background="@color/button_enable"/>

</androidx.constraintlayout.widget.ConstraintLayout>